src/index.css
/* Color Themes */
body.dark {
  --global-background: #1e1d1d;
  --turn-background: rgba(38, 49, 199, 0.806);
  --text-color: rgba(255, 255, 255, 0.87);
  --current-turn-border: rgb(227, 227, 227);
  --button-highlight-color: rgb(227, 227, 227);
  --button-background-color: #515151;
  --input-border: rgba(255, 255, 255, 0.717);
  --input-background: #1e1d1d;
}

body.light {
  --global-background: rgb(231, 231, 231);
  --turn-background: rgb(49, 63, 249);
  --text-color: black;
  --current-turn-border: white;
  --button-highlight-color: white;
  --button-background-color: #787878;
  --input-border: rgb(192, 192, 192);
  --input-background: white;
}

body.pink {
  --global-background: #ffe6ff;
  --turn-background: #ff99ff;
  --text-color: black;
  --current-turn-border: white;
  --button-highlight-color: white;
  --button-background-color: #ff66ff;
  --input-border: rgba(255, 255, 255, 0.717);
  --input-background: #ff66ff;
}

body.forest {
  --global-background: #0f2f12;
  --turn-background: rgb(32, 91, 43);
  --text-color: rgba(255, 255, 255, 0.87);
  --current-turn-border: rgb(227, 227, 227);
  --button-highlight-color: rgb(227, 227, 227);
  --button-background-color: #413929;
  --input-border: rgba(255, 255, 255, 0.821);
  --input-background: #0f2f12;
}

body.neon {
  --global-background: #1e1d1d;
  --turn-background: rgba(231, 12, 12, 0.806);
  --text-color: rgba(255, 255, 255, 0.87);
  --current-turn-border: rgb(227, 227, 227);
  --button-highlight-color: #05f9d8;
  --button-background-color: #0e0bd9;
  --input-border: #05f9d8;
  --input-background: #1e1d1d;
}

body.mint {
  --global-background: #b5f1d5;
  --turn-background: #57f6c1;
  --text-color: black;
  --current-turn-border: white;
  --button-highlight-color: white;
  --button-background-color: #57f6c1;
  --input-border: rgba(255, 255, 255, 0.717);
  --input-background: #b5f1d5;
}

/* Global */

body {
  color: var(--text-color);
  background-color: var(--global-background);
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; 
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: var(--button-background-color);
  cursor: pointer;
  transition: border-color 0.25s;
  text-align: center;
  color: var(--text-color);
}

button:hover {
  border-color: var(--button-highlight-color);
}

/* Layout */

#appSubContainer {
  display: flex;
}

#turnsContainer {
  flex: 8%;
  margin-top: 2em;
  margin-bottom: 2em;
  margin-left: 2em;
  align-items: center;
}

#sidebarContainer {
  flex: 20%;
  position: fixed;
  right: 2em;
  top: 25%;
  text-align: center;
  max-width: 40%;
}

#sidebarContainer button {
  margin: 0.3em;
}

#sidebar p {
  font-size: 120%;
}

#turnButtons button {
  width: 140px;
}

/* Add Turn Form */

#addTurnForm {
  margin: 0.5em 0em;
}

#addTurnForm input[type=text], input[type=number] {
  margin: 0.3em;
  width: 100%;
  background-color: var(--input-background);
  border: solid var(--input-border);
  line-height: 1.5;
  color: var(--text-color);
}

#addTurnForm input[type=text]:focus, input[type=number]:focus {
  border-color: var(--button-highlight-color);
  outline: none;
  background-color: var(--input-background);
  color: var(--text-color);
}

#addTurnForm input[type=submit] {
  background-color: var(--button-background-color);
  border: 1px solid transparent;
  border-radius: 8px;
  padding: 0.6em 1.2em;
  font-size: .8em;
  font-weight: 500;
  font-family: inherit;
  background-color: var(--button-background-color);
  cursor: pointer;
  transition: border-color 0.25s;
  text-align: center;
  margin-top: 5px;
  color: var(--text-color);
}

#addTurnForm input[type=submit]:hover {
  border-color: var(--button-highlight-color);
}

/* Turn */

.turn {
  display: flex;
  justify-content: space-between;
  padding: 0.5em 1em;
  align-items: center;
  background-color: var(--turn-background);
  margin: 1em;
  border-radius: 10px;
  min-height: 30px;
  height: fit-content;
  min-width: 150px;
  width: fit-content;
  max-width: 300px;
}

.turn p {
  padding: 0em 0.5em;
}

.turnInitiative {
  margin-left: auto;
}

.turnRHS {
  align-items: center;
  margin-left: 0.3em;
}

.currentTurn {
  border: solid var(--current-turn-border) 2px;
  min-height: 35px;
  height: fit-content;
  min-width: 160px;
}

.removeTurnButton {
  border-radius: 25%;
  font-size: 14px;
  padding: 10px;
  background-color: var(--button-background-color);
}

/* Theme Picker */

#themePickerButton {
  position: fixed;
  right: 5%;
  bottom: 5%;
  font-size: .8em;
  width: 110px;
}

.themeOptionsContent {
  display: none;
  position: fixed;
  right: 5%;
  bottom: 15%;
  overflow-y: scroll;
  height: fit-content;
  max-height: 10%;
  width: 60%;
  font-size: .8em;
  text-align: center;
  border: solid var(--button-highlight-color);
  background-color: var(--global-background);
  border-radius: 10px;
}

.themeOptionsContent p:hover {
  /* Placeholder */
  border: solid var(--button-highlight-color);
}

.themeOptionsContent button {
  margin: 0.5em;
}

.show {
  display: block;
}

